--- a/HTTP/package.json
+++ b/HTTP/package.json
@@ -2,7 +2,10 @@
   "name": "HTTP",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "./src/server",
+  "bin": {
+    "ms": "./bin/www.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
