--- a/koa-upload/package.json
+++ b/koa-upload/package.json
@@ -10,9 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/multer": "^2.0.2",
+    "@koa/router": "^8.0.5",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-multer": "^1.0.2",
     "koa-static": "^5.0.0",
-    "mime": "^2.4.4"
+    "mime": "^2.4.4",
+    "multer": "^1.4.2",
+    "uuid": "^3.3.3"
   }
 }
